# C_d

./: .gitignore  README.md  default_config.json  pyproject.toml  requirements.txt
data/raw/PointClouds/: README.md
data/raw/subset_dir/: README.md
experiments/: README.md  test_ptm_model.py
notebooks/: README.md
src/: main.py
src/config/: constants.py
src/data/: dataset.py  slices.py
src/evaluation/: evaluate.py
src/inference/: predict.py
src/models/: __init__.py  model.py  model_test.py
src/models/components/: dgcnn.py  lstm_encoder.py  mlp_head.py  pointnet_2d.py  transformer_encoder.py
src/models/experiment_models/: model_DLM.py  model_DTM.py  model_PLM.py  model_PTM.py
src/training/: ignite_loops.py
src/utils/: helpers.py  io.py  logger.py  model_summary_script.py
