[project]
name = "Cd_project"
version = "0.1.0"
description = "A light weight C_d predictor"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  # PyTorch with CUDA 12.1
  "torch==2.3.0+cu121",
  "torchvision==0.18.0+cu121",
  "torchaudio==2.3.0+cu121",

  # Data handling & ML utilities
  "numpy<2.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.65",
  "scikit-learn>=1.2",
  "joblib>=1.2",
  "paddlepaddle>=3.0.0",
  "PyYAML>=6.0",

  # TensorBoard
  "tensorboard>=2.13",

  # PyTorch Geometric (core)
  "torch_geometric>=2.3.0",

  # PyTorch Ignite for training workflows
  "pytorch-ignite>=0.5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }